[package]
# TODO: Rename this package to change the method name from METHOD_NAME
name = "method_name"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = {version = "0.15.3", default-features = false} 
rlua = {git = "https://github.com/MotionZK/tiny-rlua.git", default-features = false}
